[gd_scene load_steps=5 format=3 uid="uid://cqmrmyp62c40f"]

[ext_resource type="Script" path="res://scripts/player_entity.gd" id="1_ich35"]
[ext_resource type="Texture2D" uid="uid://bv6l1nc1lk0q6" path="res://sprites/Tank.png" id="2_ib6x0"]
[ext_resource type="Texture2D" uid="uid://bmtclpy7d72k1" path="res://sprites/GunTurret.png" id="3_bpf4y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2tk5h"]
size = Vector2(38, 39)

[node name="Player Entity" type="Node2D"]
script = ExtResource("1_ich35")

[node name="TankBody" type="Sprite2D" parent="."]
position = Vector2(-0.0416965, -0.416698)
scale = Vector2(0.208333, 0.208333)
texture = ExtResource("2_ib6x0")

[node name="GunTurret" type="Sprite2D" parent="."]
position = Vector2(-0.0416927, 0.583298)
rotation = -3.14159
scale = Vector2(0.227941, 0.227941)
texture = ExtResource("3_bpf4y")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_2tk5h")

[connection signal="input_event" from="Area2D" to="." method="on_rclick"]
[connection signal="mouse_entered" from="Area2D" to="." method="on_hover"]
[connection signal="mouse_exited" from="Area2D" to="." method="off_hover"]
